[gd_scene load_steps=2 format=3 uid="uid://bd353xd0hihgf"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_7k055"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7k055")
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="DistroBox" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -171.0
offset_top = 20.0
offset_right = 171.0
offset_bottom = 78.0
grow_horizontal = 2
alignment = 1

[node name="DistroBox" type="VBoxContainer" parent="DistroBox"]
layout_mode = 2
metadata/_edit_lock_ = true

[node name="DistroLbl" type="Label" parent="DistroBox/DistroBox"]
layout_mode = 2
text = "MyDistro"

[node name="VerValLbl" type="Label" parent="DistroBox/DistroBox"]
layout_mode = 2
text = "1.0"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="DistroBox"]
layout_mode = 2

[node name="UserBox" type="HSplitContainer" parent="DistroBox/VBoxContainer"]
layout_mode = 2
metadata/_edit_lock_ = true

[node name="UsersLbl" type="Label" parent="DistroBox/VBoxContainer/UserBox"]
layout_mode = 2
text = "Users:"

[node name="UsrValLbl" type="Label" parent="DistroBox/VBoxContainer/UserBox"]
layout_mode = 2
text = "1.0"

[node name="AgeBox" type="HSplitContainer" parent="DistroBox/VBoxContainer"]
layout_mode = 2
metadata/_edit_lock_ = true

[node name="AgeLbl" type="Label" parent="DistroBox/VBoxContainer/AgeBox"]
layout_mode = 2
text = "Ver. Age:"

[node name="AgeValLbl" type="Label" parent="DistroBox/VBoxContainer/AgeBox"]
layout_mode = 2
text = "0"

[node name="MainBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 13.0
offset_right = 163.0
grow_vertical = 2

[node name="HypeBox" type="HSplitContainer" parent="MainBox"]
layout_mode = 2
metadata/_edit_lock_ = true

[node name="HypeLbl" type="Label" parent="MainBox/HypeBox"]
layout_mode = 2
text = "Hype:"

[node name="HypeVal" type="Label" parent="MainBox/HypeBox"]
layout_mode = 2
text = "0"
horizontal_alignment = 2

[node name="BugBox" type="HSplitContainer" parent="MainBox"]
layout_mode = 2
metadata/_edit_lock_ = true

[node name="BugsLbl" type="Label" parent="MainBox/BugBox"]
layout_mode = 2
text = "Bugs:"

[node name="BugsVal" type="Label" parent="MainBox/BugBox"]
layout_mode = 2
text = "0"
horizontal_alignment = 2

[node name="SizeBox" type="HSplitContainer" parent="MainBox"]
layout_mode = 2
metadata/_edit_lock_ = true

[node name="SizeLbl" type="Label" parent="MainBox/SizeBox"]
layout_mode = 2
text = "Size(GB):"

[node name="SizeVal" type="Label" parent="MainBox/SizeBox"]
layout_mode = 2
text = "0"
horizontal_alignment = 2

[node name="VolBox" type="HSplitContainer" parent="MainBox"]
layout_mode = 2
metadata/_edit_lock_ = true

[node name="VolLbl" type="Label" parent="MainBox/VolBox"]
layout_mode = 2
text = "Volunteers:"

[node name="VolVal" type="Label" parent="MainBox/VolBox"]
layout_mode = 2
text = "0"
horizontal_alignment = 2

[node name="PaidBox" type="HSplitContainer" parent="MainBox"]
layout_mode = 2
metadata/_edit_lock_ = true

[node name="PaidLbl" type="Label" parent="MainBox/PaidBox"]
layout_mode = 2
text = "Paid Workers:"

[node name="PaidVal" type="Label" parent="MainBox/PaidBox"]
layout_mode = 2
text = "0"
horizontal_alignment = 2

[node name="PackagesBtn" type="Button" parent="MainBox"]
layout_mode = 2
text = "Packages"
metadata/_edit_lock_ = true

[node name="WorkersBtn" type="Button" parent="MainBox"]
layout_mode = 2
text = "Workers"
metadata/_edit_lock_ = true

[node name="SaveBox" type="HSplitContainer" parent="MainBox"]
layout_mode = 2
metadata/_edit_lock_ = true

[node name="SaveBtn" type="Button" parent="MainBox/SaveBox"]
layout_mode = 2
text = "Save"

[node name="SpeedBtn" type="Button" parent="MainBox/SaveBox"]
layout_mode = 2
text = "Pause"

[node name="MetaBox" type="HSplitContainer" parent="MainBox"]
layout_mode = 2
metadata/_edit_lock_ = true

[node name="QuitBtn" type="Button" parent="MainBox/MetaBox"]
layout_mode = 2
text = "Quit"

[node name="RestartBtn" type="Button" parent="MainBox/MetaBox"]
layout_mode = 2
text = "Restart"

[node name="NameDistroWin" type="AcceptDialog" parent="."]
title = "Name your new Distro"
initial_position = 3
size = Vector2i(300, 100)
current_screen = 0
ok_button_text = "Submit"

[node name="DistroNameInput" type="LineEdit" parent="NameDistroWin"]
offset_left = 8.0
offset_top = 8.0
offset_right = 292.0
offset_bottom = 51.0
placeholder_text = "MyDistro"
alignment = 1

[node name="IntroWin" type="AcceptDialog" parent="."]
initial_position = 2
size = Vector2i(400, 200)

[node name="RichTextLabel" type="RichTextLabel" parent="IntroWin"]
offset_left = 8.0
offset_top = 8.0
offset_right = 392.0
offset_bottom = 151.0
text = "Welcome to New Technology (NT) era. A lot has changed since we last met. The NT era has brought with a shift towards user expereince. "

[connection signal="pressed" from="MainBox/SaveBox/SaveBtn" to="." method="_on_save_btn_pressed"]
[connection signal="confirmed" from="NameDistroWin" to="." method="_on_name_distro_win_confirmed"]
